# sectxt

./: .gitignore  Cargo.toml  README.md  compose.yml  main.tf
.github/workflows/: ci.yml
backend/: Cargo.toml  openapi.json  rustfmt.toml
backend/crates/sectxt-api/: Cargo.toml
backend/crates/sectxt-api/src/: dto.rs  handler.rs  main.rs  state.rs
backend/crates/sectxt-core/src/: repo.rs
backend/crates/sectxt-core/src/message/: mod.rs  repo.rs
backend/crates/sectxt-db/migrations/: 20260522162508_init.down.sql  20260522162508_init.up.sql
backend/crates/sectxt-db/src/: repo.rs
backend/crates/sectxt-db/src/message/: mod.rs  repo.rs
crates/sectxt-core/: Cargo.toml
crates/sectxt-core/src/: attachment.rs  crypto.rs  lib.rs  message.rs  repo.rs
crates/sectxt-db/migrations/: 20260522162508_init.down.sql  20260522162508_init.up.sql
crates/sectxt-db/src/: attachment.rs  ext.rs  lib.rs  message.rs  repo.rs
crates/sectxt-lambda-message/: Cargo.toml
crates/sectxt-lambda-message/src/: main.rs  state.rs
crates/sectxt-shared/: Cargo.toml
crates/sectxt-shared/src/: attachment.rs  lib.rs  message.rs
frontend/: eslint.config.js  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: MessageForm.vue  MessageUrlView.vue  MessageView.vue  ThemeToggleButton.vue
frontend/src/composables/: useCrypto.ts  useNotification.ts
frontend/src/lib/: crypto.ts  mapper.ts  model.ts
frontend/src/mappers/: attachment.ts  message.ts
frontend/src/pages/: [id].vue  index.vue
frontend/src/test/: crypto.test.ts
frontend/src/test/composables/: useCrypto.test.ts
frontend/src/test/mappers/: attachment.test.ts
terraform/database/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/message-handler/: main.tf  outputs.tf  providers.tf  variables.tf
terraform/server/: main.tf
