[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["PotatoMaster101"]
categories = ["web-programming"]
description = "Secret message"
edition = "2024"
keywords = ["git"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/PotatoMaster101/sectxt"
version = "0.1.0"

[workspace.dependencies]
aes-gcm = { version = "0.10" }
argon2 = { version = "0.5" }
async-trait = { version = "0.1" }
aws-config = { features = ["behavior-version-latest"], version = "1.8" }
chrono = { features = ["serde"], version = "0.4" }
lambda_http = { version = "1.2" }
serde = { features = ["derive"], version = "1.0" }
serde_json = { version = "1.0" }
sha2 = { version = "0.11" }
sqlx = { features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"], version = "0.9" }
thiserror = { version = "2.0" }
tokio = { features = ["full"], version = "1.52" }
tracing-subscriber = { version = "0.3" }
uuid = { features = ["serde", "v4"], version = "1.23" }
zeroize = { features = ["derive"], version = "1.8" }

sectxt-core = { path = "crates/sectxt-core" }
sectxt-db = { path = "crates/sectxt-db" }
sectxt-shared = { path = "crates/sectxt-shared" }

[workspace.lints.clippy]
cargo = { level = "warn", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
nursery = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
