[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sectxt-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
aes-gcm = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
