[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sectxt-lambda-message"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
lambda_http = { workspace = true }
sectxt-core = { workspace = true }
sectxt-db = { workspace = true }
sectxt-shared = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
