[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sectxt-api"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
axum = { workspace = true }
dotenvy = { workspace = true }
sectxt-core = { workspace = true }
sectxt-db = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
